--- a/deployment.yaml
+++ b/deployment.yaml
@@ -15,6 +15,8 @@ spec:
       containers:
       - name: myapp-container
         image: maziar/lo835_configmap:01
+        ports:
+        - containerPort: 8080
         env:
         - name: APP_COLOR
           valueFrom:
